fix: UI on smaller screens

--- a/src/app/shared/components/invites-manager/invites-manager.component.scss
+++ b/src/app/shared/components/invites-manager/invites-manager.component.scss
@@ -6,7 +6,6 @@
     background-color: var(--background-secondary-color);
     .invite-info {
         flex: 1;
-        max-width: 56%;
     }
     .invite-link {
         font-weight: 700;
